--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 
 <section class="intro">
   <div class="container">
-{% include subscription.html %}
+{% include weekly-issues.html %}
 </div>
 </section>
 
